--- a/app/index.templ
+++ b/app/index.templ
@@ -1,6 +1,11 @@
 package app
 
+import (
+	"github.com/platipy-io/d2s/internal/log"
+)
+
 templ IndexTplt(wrapped templ.Component) {
+	{{ defer log.FnWrapper(ctx, "index rendering")() }}
 	<div class="min-h-screen">
 		<section class="container mx-auto flex md:px-24 md:py-10 md:flex-row flex-col items-center">
 			<div
