Change header to remove non-needed parts + fix avatar

--- a/app/base.templ
+++ b/app/base.templ
@@ -36,40 +36,16 @@ templ header(context *server.Context) {
 		<nav class="flex items-center justify-between flex-wrap bg-white py-4 mx-auto px-8">
 			<div class="flex items-center flex-shrink-0 text-white mr-6">
 				<a class="text-white no-underline hover:text-white hover:no-underline pl-2" href="/">
-					<div class="h-8 bg-gray-500 w-16 block mx-auto rounded-sm"></div>
+					<img src="/logo.png" class="object-scale-down h-10"/>
 				</a>
 			</div>
 
-			<div class="block lg:hidden">
-				<button id="nav-toggle" class="focus:outline-none">
-					<div class="h-1 bg-gray-300 w-8 mb-1 block mx-auto rounded-sm"></div>
-					<div class="h-1 bg-gray-300 w-8 mb-1 block mx-auto rounded-sm"></div>
-					<div class="h-1 bg-gray-300 w-8 mb-1 block mx-auto rounded-sm"></div>
-				</button>
-			</div>
 
 			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block pt-6 lg:pt-0" id="nav-content">
 				<ul class="list-reset lg:flex justify-end flex-1 items-center">
-					<li class="mr-3">
-						<a class="inline-block py-2 px-4 active:text-gray-900 no-underline" href="#">
-							<div class="h-2 bg-gray-400 w-16 mt-2 block mx-auto rounded-sm"></div>
-						</a>
-					</li>
-					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-4"
-							href="#">
-							<div class="h-2 bg-gray-400 w-16 mt-2 block mx-auto rounded-sm"></div>
-						</a>
-					</li>
-					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-4"
-							href="#">
-							<div class="h-2 bg-gray-400 w-16 mt-2 block mx-auto rounded-sm"></div>
-						</a>
-					</li>
 					if context.User != nil {
 						<li class="mr-3">
-							<a class="inline-block w-8 h-8 overflow-hidden bg-gray-400 rounded-full" href="/auth/logout">
+							<a class="inline-block align-middle w-10 h-10 overflow-hidden bg-gray-400 rounded-full" href="/auth/logout">
 							</a>
 						</li>
 					}
