--- a/app/error.templ
+++ b/app/error.templ
@@ -4,7 +4,7 @@ import "strconv"
 import "net/http"
 
 templ ErrorTplt(err HTTPError) {
-	<section class="bg-white dark:bg-gray-900">
+	<section>
 		<div class="mx-auto max-w-screen-xl px-4 py-8 lg:px-6 lg:py-16">
 			<div class="mx-auto max-w-screen-sm text-center">
 				<h1 class="dark:text-primary-500 mb-4 text-7xl font-extrabold tracking-tight text-blue-300 lg:text-9xl">
